# devlog

./: .codacy.yml  .codebeatignore  .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  bandit.yml  docker-compose.yml  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  tests.yml
conf/: README.md  devlog-task@.service  devlog-tasks.target  devlog.env  devlog.service  devlog.target  nginx.conf  upstart.conf  uwsgi.ini
conf/common/: general.conf
devlog/: _version.py  app.py  config.py  ext.py  models.py  wsgi.py
devlog/auth/: __init__.py  provider.py  utils.py  views.py
devlog/home/: views.py
devlog/static/css/: app.css
devlog/templates/: base.html
devlog/templates/auth/: select.html
devlog/templates/user/: details.html
devlog/user/: __init__.py  forms.py  views.py
devlog/utils/: forms.py  models.py
docs/: concepts.rst  conf.py  flask.rst  functionality.rst  index.rst  notable.rst  tbc.rst  todo.rst  tools.rst  uwsgi.rst
docs/rants/: cssframeworks.rst  flask_is_good.rst  miguel.rst
requirements/: base.txt  dev.txt  prod.txt  test.txt
secrets/: config_local.py.template  secrets.py.template
src/devlog/: __init__.py  _version.py  app.py  assets.py  cli.py  config.py  config_test.py  ext.py  migrations.py  models.py  rqsettings.py  tasks.py  templates.py  views.py  wsgi.py
src/devlog/ap/: __init__.py  common.py  web.py
src/devlog/api/: __init__.py  schema.py  utils.py  views.py
src/devlog/auth/: __init__.py  forms.py  provider.py  utils.py  views.py
src/devlog/blog/: __init__.py  forms.py  service.py  views.py
src/devlog/home/: __init__.py  views.py
src/devlog/pages/: kontakt.html.md  linkowisko.html.md  o.html.md
src/devlog/post/: __init__.py  forms.py  service.py  views.py
src/devlog/templates/: base.html  base.jinja  flatpage.html  index.html  index.jinja
src/devlog/translations/: messages.pot
src/devlog/user/: __init__.py  forms.py  service.py  utils.py  views.py  web.py
src/devlog/utils/: app.py  blog.py  cache.py  email.py  forms.py  i18n.py  (+7 more)
tests/: __init__.py  conftest.py  factories.py  test_auth_utils.py  test_auth_views.py  test_blog_service.py  test_blog_views.py  test_home_page.py  test_home_views.py  test_post_service.py  test_post_views.py  test_tasks.py  test_user_object.py  test_user_views.py  test_utils.py  test_utils_pagination.py  test_views.py
tests/ap/: test_common.py  test_web.py
tests/api/: test_login.py  test_quip.py  test_utils.py
tests/auth/: test_views.py
tests/factories/: __init__.py  blog.py  post.py  user.py
(+54 files in other folders)
