[aliases]
test = pytest

[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true

[coverage:run]
omit =
    tests/*
    docs/*
    src/devlog/_version.py
    src/devlog/wsgi.py
    src/devlog/cli.py
    src/devlog/config*.py
    src/devlog/app.py
    src/devlog/ext.py
    src/devlog/templates.py
    src/devlog/__init__.py
    secrets/*

[flake8]
max-line-length = 88

[versioneer]
VCS = git
style = pep440
versionfile_source = src/devlog/_version.py
versionfile_build = devlog/_version.py
tag_prefix =
parentdir_prefix =

[extract_messages]
keywords = _ gettext pgettext ngettext npgettext lazy_gettext
mapping_file = babel.cfg
width = 80
output_file = src/devlog/translations/messages.pot
input_dirs = src/devlog

[init_catalog]
domain = messages
input_file = src/devlog/translations/messages.pot
output_dir = src/devlog/translations

[compile_catalog]
domain = messages
directory = src/devlog/translations
use_fuzzy = true

[update_catalog]
domain = messages
output_dir = src/devlog/translations
input_file = src/devlog/translations/messages.pot
