[metadata]
license_files = 
    LICENSE

[tool:pytest]
norecursedirs = .* *.egg* build dist

[tool:isort]
multi_line_output = 5
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[coverage:run]
omit =
    tests/*
    docs/*
    src/devlog/wsgi.py
    src/devlog/cli.py
    src/devlog/config*.py
    src/devlog/app.py
    src/devlog/ext.py
    src/devlog/templates.py
    src/devlog/__init__.py
    src/devlog/_version.py

[flake8]
max-line-length = 88
